--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <footer id="footer" class="js-footer" role="contentinfo">
     
     </footer>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
     
   </body>
 </html>
