--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Color Picker — HTML Color Codes</title>
     <meta property="og:type" content="website">
-    <link href="../style/style.css" rel="stylesheet" />
+    <link href="style/style.css" rel="stylesheet" />
   </head>
   <body class="color-picker color-picker_index">
     <div id="modal"></div>
